# 3d-universe

./: .dockerignore  .env  .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  solar_system copy.html
templates/: base.html  big_bang.html  black_hole.html  chandrayaan_mission.html  mangalyaan_mission.html  scale_of_uvinverse.html  solar_system.html  starlink_network.html  voyager_mission.html
