[project]
name = "3d-universe"
version = "0.1.0"
description = "A web-based interactive 3D visualization platform for exploring cosmic phenomena and space missions"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Govind Naik", email = "govindrnaik@example.com"},
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.1.2",
]

[project.urls]
Repository = "https://github.com/govindrnaik/3d-universe"
Issues = "https://github.com/govindrnaik/3d-universe/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88
